# emailtrail-webapp

./: Dockerfile  LICENSE.txt  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  run.py
frontend/: README.md  index.html
frontend/static/: accordian.js  default.css
frontend/static/css/: app.1e7e74f7f3b6e4eec731fd8e10f5d6c1.css  app.2b77b2629495bf07085ded88abf0e3f5.css  app.5fb6d8c1f3c00e4adbf73d9fd0c52d92.css
frontend/static/js/: app.386961b429a0cadb1c6c.js  app.386961b429a0cadb1c6c.js.map  app.6fd8f69dad85e380b9d6.js  app.6fd8f69dad85e380b9d6.js.map  app.7654c02c4cd14f21955a.js  app.7654c02c4cd14f21955a.js.map  app.85045e6a8281d29cef17.js  app.85045e6a8281d29cef17.js.map  manifest.088ae620e03b32166219.js  manifest.088ae620e03b32166219.js.map  manifest.1b419011395224ce41b2.js  manifest.1b419011395224ce41b2.js.map  manifest.3f80cfb74fef4f6479f2.js  manifest.3f80cfb74fef4f6479f2.js.map  manifest.8642647baa07ff0ef304.js  manifest.8642647baa07ff0ef304.js.map  vendor.1f12d93a805ec8eb6f2e.js  vendor.1f12d93a805ec8eb6f2e.js.map  vendor.8714eff4c5604b83bb31.js  vendor.8714eff4c5604b83bb31.js.map
vue-app/: .tool-versions  index.html  package-lock.json  package.json
vue-app/config/: index.js
vue-app/src/: AnalyseEmail.vue  App.vue  main.js
vue-app/src/components/: AnalyseEmail.vue  AnalyseHeader.vue  Header.vue  Trail.vue  sampleEmail.js  sampleHeader.js  utcOffsets.js
vue-app/static/: component.css  default.css
